Add JVM memory settings